Paginate transaction account history
